# voice-portfolio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  livekit.toml  pyproject.toml  pytest.ini  sqlc.yaml
docs/: ARCHITECTURE.md
frontend/: components.json  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/token/: route.ts
frontend/app/talk/: page.tsx
frontend/components/agents-ui/: agent-control-bar.tsx
sqlc/: schema.sql
sqlc/queries/: analysis_results.sql  bookings.sql  sessions.sql  user_profiles.sql  users.sql
src/: main.py
src/agents/: agent.py  prompts.py  protfolio_agent.py
src/agents/prompts/: v1.py  v2.py
src/agents/tools/: cal_com_booking.py
src/config/: settings.py
src/db/: __init__.py  connection.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 20250216_initial_conversation_analysis_schema.py  20260217_001_add_visitor_id_and_user_profiles.py
src/db/sqlc/: __init__.py  analysis_results.py  bookings.py  models.py  sessions.py  user_profiles.py  users.py
src/hooks/: session.py  session_capture.py
src/storage/: __init__.py  r2.py
tests/: README.md  __init__.py  conftest.py  test_voice_ux_edge_cases.py  test_voice_ux_error_handling.py  test_voice_ux_flows.py
tests/helpers/: session_factory.py
