[project]
name = "voice-portfolio"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core LiveKit Agents with audio extras; include LLM extras needed for tests
    "livekit-agents[openai,google,groq,silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "pydantic-settings>=2.12.0",
    "alembic>=1.18.4",
    "psycopg[binary,pool]>=3.3.2",
    "sqlalchemy>=2.0",
    "boto3>=1.35",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
